--- a/w1/d2/index.html
+++ b/w1/d2/index.html
@@ -92,21 +92,22 @@
         <input type="submit" name="subscribe">
     </form>
     <hr>
-
+    
     <aside>
         <h2>Articoli correlati</h2>
         <a href="codice.html">Validare il codice HTML</a>
         <p>Categoria:develop <br> Data: 18-09-2020</p>
         <a href="sintassi.html">Correggere la sintassi</a>
-        <p>Categoria:develop <br> Data: 16-09-2020</p>
+        <p>Categoria:develop <br>Data: 16-09-2020</p>
         <a href="kb.html">Meno kb nella pagina</a>
         <p>Categoria: ottimizzazione<br>Data: 30-09-2020</p>
     </aside>
     <hr>
+    
     <footer>
         <p>Blog Epicode©2021<br>
             Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA
-            00112233. <a href="info@epicode.school">info@epicode.school</a>
+            00112233. <a href="mailto:info@epicode.school">info@epicode.school</a>
         </p>
     </footer>
 </body>
